// Vitest Snapshot v1

exports[`PresetHeadingSans > default configuration > renders correctly 1`] = `
<p
  class="cdr-text cdr-heading-sans"
  style="--cdr-heading-sans-font-size: var(--cdr-type-scale-3); --cdr-heading-sans-line-height: calc(var(--cdr-type-scale-3) * var(--cdr-heading-sans-line-height-ratio));"
>
  <!-- @slot CdrText content -->
  
  
  paragraph
  
  
</p>
`;

exports[`PresetHeadingSans > passing a scale > renders correctly 1`] = `
<p
  class="cdr-text cdr-heading-sans"
  style="--cdr-heading-sans-font-size: var(--cdr-type-scale-1); --cdr-heading-sans-line-height: calc(var(--cdr-type-scale-1) * var(--cdr-heading-sans-line-height-ratio));"
>
  <!-- @slot CdrText content -->
  
  
  paragraph
  
  
</p>
`;
